--- a/frontassets/css/style.css
+++ b/frontassets/css/style.css
@@ -296,3 +296,10 @@
      font: 300 42px / 48px "Roboto", sans-serif; 
 	}
 }
+/*
+#header_main .uk-navbar-nav > li > a{
+    color:#fff;
+}
+#header_main .uk-navbar {
+    background: #007569;
+}
