--- a/frontassets/css/style.css
+++ b/frontassets/css/style.css
@@ -1,5 +1,5 @@
 .newinput {
-	width: 55%;
+/*	width: 55%;
 	font-size: 18px;
 	border-color: #eee;
     height: 45px;
@@ -8,6 +8,17 @@
     border-radius: 4px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
     -webkit-transition: border-color ease-in-out 0.15s,box-shadow ease-in-out 0.15s;
+*/
+    display: block;
+    height: 37px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.714;
+    background: #f5f5f5;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    transition: border-color ease-in-out 0.15s,box-shadow ease-in-out 0.15s;
 }
 @media (max-width: 800px) {
 	.newinput {
