--- a/f/styles.css
+++ b/f/styles.css
@@ -613,12 +613,37 @@ background-color: unset;
 }
 
 
+.logo{
+	    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+    height: 50px;
+    width: 50px;
+    border-radius: 100px;
+    margin: auto;
+    background-color: #fff;
+    cursor: pointer;
+}
+.sharing{
+	display: none;
+	/*background-color: red;*/
+    float: left;
+    height: 100%;
+    padding: 8px 10px;
+}
+.shareicon{
+	color: #fff;
+    font-size: 18px;
+    cursor: pointer;
+}
+.contshare{
+    text-align: center;
+}
+
 @media (max-width: 839px) {
 	.uk-navbar{
 		text-align: center;
 	}
 	#contbtn{
-	font-size: 20px;
+	font-size: 19px;
     height: 100%;
 	margin:0;
 	padding-top: 0px;
@@ -659,14 +684,13 @@ background-color: unset;
 	.midlePage{
 		width: 100%;
 	}
+	.sharing{
+		display: block;
+		width: 15%;
+	}
+	.contshare{
+		float: left;
+    	width: 70%;
+	}
 
-}
-.logo{
-	    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
-    height: 50px;
-    width: 50px;
-    border-radius: 100px;
-    margin: auto;
-    background-color: #fff;
-    cursor: pointer;
 }
