--- a/frontassets/css/main.css
+++ b/frontassets/css/main.css
@@ -1755,9 +1755,9 @@ a:active{color:#0d47a1;text-decoration:none;}
 .icon_dark{color:#727272;}
 #header_main{-webkit-transition:all 280ms cubic-bezier(0.4, 0, 0.2, 1);transition:all 280ms cubic-bezier(0.4, 0, 0.2, 1);position:relative;z-index:10;}
 #header_main .uk-navbar{background:#fff;}
-#header_main .uk-navbar-nav > li > a{color:#727272;text-transform:uppercase;font-size:14px;font-family:"Roboto", sans-serif;font-weight:500;box-shadow:inset 0 -4px 0 rgba(255, 255, 255, 0);background:none !important;-webkit-transition:all 280ms cubic-bezier(0.4, 0, 0.2, 1);transition:all 280ms cubic-bezier(0.4, 0, 0.2, 1);}
+#header_main .uk-navbar-nav > li > a{color:#d2d2d2;text-transform:uppercase;font-size:14px;font-family:"Roboto", sans-serif;font-weight:500;box-shadow:inset 0 -4px 0 rgba(255, 255, 255, 0);background:none !important;-webkit-transition:all 280ms cubic-bezier(0.4, 0, 0.2, 1);transition:all 280ms cubic-bezier(0.4, 0, 0.2, 1);}
 #header_main .uk-navbar-nav > li > a:hover,
-#header_main .uk-navbar-nav > li > a:active{color:#727272;}
+#header_main .uk-navbar-nav > li > a:active{color:#d2d2d2;}
 #header_main .uk-navbar-nav > li.current_active a{box-shadow:inset 0 -4px 0 #7cb342;}
 #header_main.header-light{background:#fff;}
 #header_main .header_cta{margin-top:14px;}
@@ -1785,7 +1785,9 @@ a:active{color:#0d47a1;text-decoration:none;}
 .banner .uk-slideshow > li{background-size:100% auto;background-position:center center;background-repeat:no-repeat;}
 .banner .uk-slideshow > li .slide_content_a{margin:160px 0 0 640px;}
 .banner .uk-slideshow > li .slide_content_b{margin:320px 0 0 0;background:rgba(0, 0, 0, 0.4);padding:24px;}
-.banner .uk-slideshow > li .slide_content_c{margin:120px 540px 0 0;}
+.banner .uk-slideshow > li .slide_content_c{
+	margin:120px 540px 0 0;
+}
 .banner .uk-slideshow > li .slide_content_c .slide_header,
 .banner .uk-slideshow > li .slide_content_c p{color:#212121;}
 .banner .uk-slideshow > li .slide_header{color:#fff;font:400 38px/42px "Roboto", sans-serif;margin:0 0 18px;}
@@ -1816,7 +1818,17 @@ a:active{color:#0d47a1;text-decoration:none;}
 .banner .uk-slideshow > li{height:auto;min-height:360px;}
 .banner .uk-slideshow > li .slide_content_a,
 .banner .uk-slideshow > li .slide_content_b,
-.banner .uk-slideshow > li .slide_content_c{margin:0;position:absolute;left:0;right:0;top:0;bottom:0;background:rgba(0, 0, 0, 0.4);padding:48px 48px 0;text-align:center;}
+.banner .uk-slideshow > li .slide_content_c{
+	margin:0;
+	position:absolute;
+	left:0;
+	right:0;
+	top:0;
+	bottom:0;
+	background:rgba(0, 0, 0, 0.4);
+	padding:48px 48px 0;
+	text-align:center;
+}
 .banner .uk-slideshow > li .slide_header{margin-bottom:20px;color:#fff !important;}
 .banner .uk-slideshow > li p{font-size:20px;color:#fff !important;}
 .banner .uk-slideshow > li p + *{margin-top:24px;}
@@ -1830,7 +1842,17 @@ a:active{color:#0d47a1;text-decoration:none;}
 @media only screen and (max-width:767px){.banner .uk-slideshow > li{background-size:auto 100%;}
 .banner .uk-slideshow > li .slide_content_a,
 .banner .uk-slideshow > li .slide_content_b,
-.banner .uk-slideshow > li .slide_content_c{margin:0;position:absolute;left:0;right:0;top:0;bottom:0;background:rgba(0, 0, 0, 0.4);padding:24px 12px;text-align:center;}
+.banner .uk-slideshow > li .slide_content_c{
+	margin:0;
+	position:absolute;
+	left:0;
+	right:0;
+	top:0;
+	bottom:0;
+	background:rgba(0, 0, 0, 0.4);
+	padding:24px 0px;
+	text-align:center;
+}
 .banner .uk-slideshow > li .slide_header{font:400 24px/28px "Roboto", sans-serif;margin-bottom:6px;color:#fff !important;}
 .banner .uk-slideshow > li p{font-size:15px;color:#fff !important;}
 .banner .uk-slideshow > li p + *{margin-top:24px;}
