--- a/frontassets/css/style.css
+++ b/frontassets/css/style.css
@@ -65,11 +65,26 @@
 #selectCurrency{
 	width: 44%;
 }
+.homelogocont{
+    float: left; 
+    padding:  5px
+}
+.loginspan{
+    float: right;
+}
 @media (max-width: 800px) {
-  #selectCurrency{
-	width: 100%;
-    margin-top: 10px;
-}}
+    #selectCurrency{
+        width: 100%;
+        margin-top: 10px;
+    }
+    .loginspan{
+        display: none;
+    }
+    .homelogocont{
+        width: 80%;
+        text-align: center;
+    }
+}
 .inputContainer{
 	display: block;
 	margin: 0 0 20px;
@@ -306,6 +321,21 @@
      padding: 50px; 
      font: 300 42px / 48px "Roboto", sans-serif; 
 	}
+}
+
+.categoriesa{
+    padding: 10px 77px 15px 15px;
+    border-left: 0.2px solid rgba(124, 179, 66, 0.29);
+        transition: all 280ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.categoriesa:hover{
+    background-color: #008274;
+    color: ffffff !import;
+    box-shadow: inset 0 -4px 0 #7cb342;
+    cursor: pointer;
+}
+.categoriesa > a {
+    color: ffffff !import;
 }
 /*
 #header_main .uk-navbar-nav > li > a{
