--- a/f/styles.css
+++ b/f/styles.css
@@ -387,6 +387,15 @@ background-color: unset;
     background-position: center center;
     border-radius: 100px;
 }
+.avatars{
+	box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+	height: 40px;
+    width: 40px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    border-radius: 100px;
+}
 .leftSidePanel{
 	width: 21%;
     position: fixed;
@@ -694,3 +703,4 @@ background-color: unset;
 	}
 
 }
+
