--- a/frontassets/css/style.css
+++ b/frontassets/css/style.css
@@ -1,14 +1,4 @@
 .newinput {
-/*	width: 55%;
-	font-size: 18px;
-	border-color: #eee;
-    height: 45px;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-    -webkit-transition: border-color ease-in-out 0.15s,box-shadow ease-in-out 0.15s;
-*/
     display: block;
     height: 37px;
     padding: 6px 12px;
@@ -337,10 +327,53 @@
 .categoriesa > a {
     color: ffffff !import;
 }
+.containerA{
+    width: 70%;
+}
+.sectionContent{
+    padding: 0 20px 0 110px;
+}
+
+.aboutContainer{
+
+}
+
+.aboutTitle{
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 16px; 
+    font-weight: bold;
+}
+.aboutSubTitle{
+    border-bottom: 1px solid #ccc;
+    color: #999;
+    font-size: 14px;
+    margin: 12px 0;
+    padding-bottom: 8px;
+    font-weight: bold;
+    font-size: 13px;
+    text-transform: uppercase;
+}
+.cardTitle{
+    /*font-weight: bold;*/
+}
+.thumbTitle{
+    color: #fff;
+    padding: 15px;
+    border-radius: 4px 4px 0px 0;
+}
+.footer a{color: #e9ebee;font-weight: 100;}
+.footer p{font-weight: bold;}
+.endfooter{background: #0e4e45;
+    width: 100%;
+    height: 30px;    padding: 7px;}
+        #header_main .uk-navbar-nav > li > a {
+            color: #fff;
+        }
 /*
 #header_main .uk-navbar-nav > li > a{
     color:#fff;
 }
 #header_main .uk-navbar {
     background: #007569;
-}
+}*/
