--- a/frontassets/css/style.css
+++ b/frontassets/css/style.css
@@ -274,6 +274,7 @@
  	margin: 0;
  }
  a.fundname {
+    text-decoration: unset;
     display: block;
     background: rgba(0, 0, 0, 0.38);
     position: relative;
