--- a/churches/assets/css/style.css
+++ b/churches/assets/css/style.css
@@ -9,11 +9,7 @@
     text-shadow: 1px 1px 2px rgba(0, 137, 123, 0.3);
 }
 .ubox {
-    box-shadow: 0 1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
-    padding: .1%;
-    margin-bottom: 10px;
-    padding-left: 1%;
-    border-width: 0 2px;
+    margin-top: 25px;
 }
 
 .display-none{
