--- a/churches/assets/css/style.css
+++ b/churches/assets/css/style.css
@@ -61,6 +61,9 @@ div#response {
     padding: 10px;
     border-radius: 10px 0px 0px 0px;
 }
+.md-input-wrapper label {
+    font-weight: normal;
+}
 
 .phin span, .phin input{
     display: inline-block;
@@ -113,6 +116,11 @@ div.uk-modal#loadInvoice {
     content: "";
     display: block;
     height: 50px;
+}
+#group_map{
+    height: 400px;
+    background: snow;
+    max-width: 400px;
 }
 .align-head-ad .md-fab-wrapper {
     position: relative;
