--- a/churches/assets/css/style.css
+++ b/churches/assets/css/style.css
@@ -26,6 +26,10 @@ p.estimCost {
     border-right: 1px solid #eee;
     padding-right: 5px;
 }
+.change_selectize .selectize-input {
+    border-radius: 0;
+    box-shadow: none;
+}
 label.fancy, .checkCont .inlineb label {
     font-weight: 500;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.14);
@@ -49,12 +53,9 @@ div#response {
 }
 .scrollbar
 {
-    margin-left: 30px;
-    float: left;
-    width: 98%;
+    width: 100%;
     background: #F5F5F5;
     overflow-y: scroll;
-    margin-bottom: 25px;
 }
 
 .chead {
@@ -118,9 +119,15 @@ div.uk-modal#loadInvoice {
     height: 50px;
 }
 #group_map{
-    height: 400px;
+    height: 100%;
     background: snow;
     max-width: 400px;
+}
+#header_main {
+    background: #75b531;
+}
+#page_content {
+    background: #ececec;
 }
 .align-head-ad .md-fab-wrapper {
     position: relative;
@@ -138,11 +145,11 @@ div.uk-modal#loadInvoice {
 {
     border-radius: 10px;
     background-image: -webkit-gradient(linear,
-                                       left bottom,
-                                       left top,
-                                       color-stop(0.44, rgb(122,153,217)),
-                                       color-stop(0.72, rgb(73,125,189)),
-                                       color-stop(0.86, rgb(28,58,148)));
+       left bottom,
+       left top,
+       color-stop(0.44, rgb(122,153,217)),
+       color-stop(0.72, rgb(73,125,189)),
+       color-stop(0.86, rgb(28,58,148)));
 }
 @media screen and (min-width: 1000px){
     #broadcastMsg{
