--- a/f/styles.css
+++ b/f/styles.css
@@ -339,6 +339,15 @@ background-color: unset;
 		opacity: 0;
 		display: none;
     }
+    #membersWeb{
+		opacity: 0;
+		display: none;
+    }
+    #membersMobCont{
+    	overflow: unset;
+    	height: unset;
+    	padding: 0 20px;
+    }
 	.profileInfo{
 		opacity: 0;
 		display: none;
@@ -355,6 +364,18 @@ background-color: unset;
 		opacity: 0;
 		display: none;
     }
+    #tabsCont{
+		opacity: 0;
+		display: none;
+    }
+	#webTabTitle1{
+		opacity: 0;
+		display: none;
+	}
+	#webTabTitle2{
+		opacity: 0;
+		display: none;
+	}
 	.mdl-dialog{
 		width: 100%;
 	}
@@ -362,6 +383,23 @@ background-color: unset;
 @media (min-width: 840px){
 	.mdl-dialog{
 		width: 39%;
+	}
+	#membersMob{
+		opacity: 0;
+		display: none;
+	}
+	#membersMobCont{
+		overflow: scroll;
+		height: 500px; 
+		padding: 0 20px;
+	}
+	#mobTabTitle1{
+		opacity: 0;
+		display: none;
+	}
+	#mobTabTitle2{
+		opacity: 0;
+		display: none;
 	}
 }
 .loader {
@@ -381,6 +419,7 @@ background-color: unset;
 .profile{
 	box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
 					height: 100px;
+	background-color: #d3d5db; 
     width: 100px;
     background-size: cover;
     background-repeat: no-repeat;
@@ -389,6 +428,7 @@ background-color: unset;
 }
 .avatars{
 	box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+	background-color: #d2d3d8;
 	height: 40px;
     width: 40px;
     background-size: cover;
@@ -538,7 +578,7 @@ background-color: unset;
 	background-color: #2196f3
 }
 .mdl-color--grey-100 {
-    background-color: #dde0e0 !important;
+    background-color: #e9ebee !important;
 }
 .navDiv{
 	margin-left: auto;
@@ -704,6 +744,5 @@ background-color: unset;
 		float: left;
     	width: 70%;
 	}
-
 }
 
