sms progress bar

--- a/churches/assets/css/style.css
+++ b/churches/assets/css/style.css
@@ -70,6 +70,9 @@
 .uk-badge-warning {
     background: #ffa000
 }
+.display-none{
+    display: none;
+}
 
 .uk-badge-success {
     background: #7cb342
