--- a/churches/assets/css/style.css
+++ b/churches/assets/css/style.css
@@ -73,6 +73,9 @@
 .display-none{
     display: none;
 }
+.inlineb.list-sep {
+    display: inline-block;
+}
 
 .uk-badge-success {
     background: #7cb342
