--- a/event/styles.css
+++ b/event/styles.css
@@ -364,10 +364,10 @@ background-color: unset;
 		opacity: 0;
 		display: none;
     }
-    #tabsCont{
+   /* #tabsCont{
 		opacity: 0;
 		display: none;
-    }
+    }*/
 	#webTabTitle1{
 		opacity: 0;
 		display: none;
