--- a/event/styles.css
+++ b/event/styles.css
@@ -368,10 +368,10 @@ background-color: unset;
 		opacity: 0;
 		display: none;
     }*/
-	#webTabTitle1{
+	/*#webTabTitle1{
 		opacity: 0;
 		display: none;
-	}
+	}*/
 	#webTabTitle2{
 		opacity: 0;
 		display: none;
